[metadata]
name = oe_common
version = 0.2.1
author = Dmitry Yakovlev
author_email = info@overhosting.ru
description = OeCommon
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
licence = MIT
url = 

[options]
python_requires = >=3.7
packages=find:
install_requires =
